updated lec5 notes

--- a/lec5/lec5.ipynb
+++ b/lec5/lec5.ipynb
@@ -149,8 +149,47 @@
     "    return x\n",
     "\n",
     "img_patches = img_to_patch(\n",
-    "    CIFAR_images, patch_size=4, flatten_channels=False)\n",
-    ")"
+    "    CIFAR_images, patch_size=4, flatten_channels=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "class AttentionBlock(nn.Module):\n",
+    "    def __init__(self, embed_dim, hidden_dim, num_heads, dropout=0.0):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.layer_norm_1 = nn.LayerNorm(embed_dim)\n",
+    "        self.attn = nn.MultiheadAttention(embed_dim, num_heads)\n",
+    "        self.layer_norm_2 = nn.LayerNorm(embed_dim)\n",
+    "        self.linear = nn.Sequantial(\n",
+    "            nn.Linear(embed_dim, hidden_dim),\n",
+    "            nn.GELU(),\n",
+    "            nn.Dropout(dropout),\n",
+    "            nn.Linear(hidden_dim, embed_dim),\n",
+    "            nn.Dropout(dropout),\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        inp_x = self.layer_norm_1(x)\n",
+    "        x = x + self.attn(inp_x, inp_x, inp_x)[0] # input attending to itself to be able to get to its output\n",
+    "        x = x + self.linear(self.layer_norm_2(x))\n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Vision Transformer"
    ]
   }
  ],
